// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation 1`] = `
"Invalid options object. DotEnvRuntime Plugin has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'test'. These properties are valid:
   object { entry? }"
`;

exports[`validation 2`] = `
"Invalid options object. DotEnvRuntime Plugin has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'extra'. These properties are valid:
   object { entry? }"
`;
